sandc/test/fixtures/astRegression/shouldFail/productions/lambdaExpression/UnenclosedStatement.sand
pub class UnenclosedStatement {
    foo() {
        \a -> b = c;
    }
}